# Ultidocs

./: Cargo.toml  README.md
Crates/highlighter/: Cargo.toml
Crates/highlighter/src/: lib.rs
Crates/md2html/: Cargo.toml
Crates/ultibuilder/: Cargo.toml
Crates/ultibuilder/assets/js/: prod.js
Crates/ultibuilder/assets/scripts/: reload.js
Crates/ultibuilder/assets/styles/: sidebar.css  style.css
Crates/ultibuilder/src/: assets.rs  config.rs  defaults.rs  helpers.rs  lib.rs  sidebar.rs
Crates/ultibuilder/src/helpers/: files.rs  mod.rs
Crates/ultidocs-cli/: Cargo.toml
Crates/ultidocs-cli/assets/new/: ulticonfig.json
Crates/ultidocs-cli/assets/new/content/: home.md  index.md
Crates/ultidocs-cli/assets/new/content/autogen1/: index.md  page1.md
Crates/ultidocs-cli/assets/new/content/autogen2/: page2.md
Crates/ultidocs-cli/src/: main.rs  testlint.rs
Crates/ultidocs-cli/src/cli/: mod.rs
Crates/ultidocs-cli/src/dev/: mod.rs
Crates/ultidocs-cli/src/helpers/: mod.rs
Crates/ultidocs-cli/src/lint/: mod.rs
Crates/ultidocs-cli/src/lint/linters/md/: mod.rs
Crates/ultidocs-cli/src/lint/linters/md/rules/: code.rs  general.rs  header.rs  image.rs  list.rs  mod.rs  table.rs
Crates/ultidocs-cli/src/new/: helpers.rs  mod.rs
Crates/ultidocs-macros/: Cargo.toml
Crates/ultidocs-macros/src/: lib.rs
Crates/ultidocs-macros/src/macros/: mod.rs
Crates/ultidocs-macros/src/macros/dir/: helpers.rs  mod.rs
Crates/ultidocs-macros/src/macros/web/: helpers.rs  mod.rs
Crates/ultihighlighter/: Cargo.toml
Crates/ultihighlighter/assets/: base.css  highlight.css
Crates/ultihighlighter/assets/dark/: base.css
Crates/ultihighlighter/assets/dark/langs/: batch.css  c#.css  c++.css  c.css  cpp.css  csharp.css  css.css  dart.css  html.css  java.css  javascript.css  nasm.css  php.css  python.css  r.css  rust.css  shell.css  sql.css  typescript.css
Crates/ultihighlighter/assets/light/: base.css  main.css
Crates/ultihighlighter/assets/light/langs/: batch.css  c.css  cpp.css  cshar.css  csharp.css  css.css  dart.css  html.css  java.css  javascript.css  nasm.css  php.css  python.css  r.css  rust.css  shell.css  sql.css  typescript.css
Crates/ultihighlighter/src/: engine.rs  highlight.rs  html.rs  lib.rs
Crates/ultihighlighter/src/css/: mod.rs
Crates/ultihighlighter/src/langs/: batch.rs  c.rs  consts.rs  cpp.rs  csharp.rs  css.rs  dart.rs  html.rs  java.rs  javascript.rs  mod.rs  nasm.rs  php.rs  python.rs  r.rs  rust.rs  shell.rs  sql.rs  themes.rs  typescript.rs
Crates/ultihighlighter/src/langs_res/: batch.rs  c.rs  cpp.rs  csharp.rs  css.rs  dart.rs  html.rs  java.rs  javascript.rs  mod.rs  nasm.rs  php.rs  python.rs  r.rs  rust.rs  shell.rs  sql.rs  typescript.rs
Crates/ultijson/: Cargo.toml
Crates/ultijson/src/: lib.rs
Crates/ultilinter/: Cargo.toml  structs.py  test.md
Crates/ultilinter/examples/: cli.rs
Crates/ultilinter/src/: lib.rs
Crates/ultilinter/src/core/: config.rs  edit.rs  error.rs  linter.rs  mod.rs  report.rs  rule.rs  severity.rs
Crates/ultilinter/src/fix/: engine.rs
Crates/ultilinter/src/helpers/: mod.rs
Crates/ultilinter/src/linters/: mod.rs
Crates/ultilinter/src/linters/c/: mod.rs
Crates/ultilinter/src/linters/cpp/: mod.rs
Crates/ultilinter/src/linters/csharp/: mod.rs
Crates/ultilinter/src/linters/css/: mod.rs
Crates/ultilinter/src/linters/css/rules/: error.rs  info.rs  mod.rs  warning.rs
Crates/ultilinter/src/linters/dart/: mod.rs
Crates/ultilinter/src/linters/html/: mod.rs
Crates/ultilinter/src/linters/java/: mod.rs
Crates/ultilinter/src/linters/javascript/: mod.rs
Crates/ultilinter/src/linters/md/: mod.rs
Crates/ultilinter/src/linters/md/rules/: code.rs  general.rs  header.rs  image.rs  list.rs  table.rs
Crates/ultilinter/src/linters/nasm/: mod.rs
Crates/ultilinter/src/linters/php/: mod.rs
Crates/ultilinter/src/linters/python/: mod.rs
Crates/ultilinter/src/linters/r/: mod.rs
Crates/ultilinter/src/linters/rust/: mod.rs
Crates/ultilinter/src/linters/sql/: mod.rs
Crates/ultilinter/src/linters/typescript/: mod.rs
Crates/ultimd2html/: Cargo.toml
Crates/ultimd2html/assets/Card/: base.css  dark.css  light.css
Crates/ultimd2html/assets/CardGrid/: base.css  style.css
Crates/ultimd2html/assets/LinkCard/: base.css  dark.css  light.css  style.css
Crates/ultimd2html/assets/Tabs/: base.css  dark.css  light.css  script.js
Crates/ultimd2html/src/: lib.rs
Crates/ultimd2html/src/components/: mod.rs  registry.rs
Crates/ultimd2html/src/components/cards/: card.rs  cardgrid.rs  linkcard.rs  mod.rs
Crates/ultimd2html/src/components/tabs/: mod.rs  tabitem.rs  tabs.rs
Crates/ultimd2html/src/css/: mod.rs
Crates/ultimd2html/src/helpers/: mod.rs
Crates/ultimd2html/src/js/: mod.rs
Crates/ultiminify/: Cargo.toml
Crates/ultiminify/src/: lib.rs
Crates/ultiminify/src/css/: mod.rs
Crates/ultiminify/src/html/: mod.rs
Crates/ultiminify/src/js/: mod.rs
