[workspace]
resolve = "3"
members = [
	"Crates/ultihighlighter",
	"Crates/ultimd2html", 
	"Crates/ultidocs-cli", 
	"Crates/ultibuilder",
	"Crates/ultiminify", 
	"Crates/ultijson", 
	"Crates/ultilinter",
]


[workspace.package]
version = "0.3.0"
authors = ["James Rose"]
# homepage = "https://tauri.app/"
repository = "https://github.com/RoseBlume/Ultidocs"
categories = ["web-programming"]
license = "Apache-2.0 OR MIT"
edition = "2024"




[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true