[package]
name = "ultibuilder"
version = "0.3.9"
exclude = ["CHANGELOG.md", "/target"]
description = "A library to build ultidocs websites"
include = [
    "src/**",
    "assets/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ultimd2html = { version = "0.3.9", path = "../ultimd2html" }
ultiminify = { version = "0.3.9", path = "../ultiminify", features = ["dir"]}
ultijson = { version = "0.3.9", path = "../ultijson" }
ultidocs-macros = { version = "0.3.9", path = "../ultidocs-macros", features = ["minify_web"] }
