[package]
name = "ultibuilder"
version = "0.4.0"
exclude = ["CHANGELOG.md", "/target"]
description = "A library to build ultidocs websites"
include = [
    "src/**",
    "assets/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ultimd2html = { version = "0.4.0", path = "../ultimd2html" }
ultiminify = { version = "0.4.0", path = "../ultiminify", features = ["dir"]}
ultijson = { version = "0.4.0", path = "../ultijson" }
ultidocs-macros = { version = "0.4.0", path = "../ultidocs-macros", features = ["minify_web"] }
