[package]
name = "ultidocs-cli"
version = "0.4.0"
authors.workspace = true
include = [
    "src/**",
    "Cargo.toml"
]
description = "A cli application to develop documentation sites"
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "ulti"
path = "src/main.rs"

[dependencies]
ultibuilder = { version = "0.4.0", path = "../ultibuilder" }
ultilinter = { version = "0.4.0", path = "../ultilinter", default-features = false, features = ["html", "css", "javascript"] }
ultidocs-macros = { version = "0.4.0", path = "../ultidocs-macros", features = ["dir"] }