[package]
name = "ultidocs-macros"
description = "Macros for building ultidocs"
version = "0.3.8"
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
ultiminify = { version = "0.3.8", path = "../ultiminify"}