[package]
name = "ultidocs-macros"
description = "Macros for building ultidocs"
version = "0.4.0"
authors.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
ultiminify = { version = "0.4.0", path = "../ultiminify", optional = true, features = ["html", "css", "js"] }

[features]
default = ["minify_web"]
web = []
dir = []
minify_web = ["ultiminify"]
format_web = ["ultiminify"]