[package]
name = "ultihighlighter"
version = "0.3.2"
include = [
    "src/**",
    "Cargo.toml"
]
description = "A simple highlighter to highlight markdown codeblocks and convert to html"
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

