[package]
name = "ultihighlighter"
version = "0.4.0"
include = [
    "src/**",
    "assets/**",
    "Cargo.toml"
]
description = "A simple highlighter to highlight markdown codeblocks and convert to html"
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ultidocs-macros = { version = "0.4.0", path = "../ultidocs-macros", features = ["web", "minify_web"] }

