[package]
name = "ultijson"
version = "0.3.1"
description = "A simple json parser for ultidocs manifests"
authors.workspace = true
exclude = ["CHANGELOG.md", "/target"]
include = [
    "src/**",
    "Cargo.toml"
]
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"