[package]
name = "ultilinter"
version.workspace = true
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true



[features]
default = ["c", "cpp", "csharp", "css", "dart", "html", "java", "javascript", "md", "nasm", "php", "python", "r", "rust", "sql", "typescript"]

c = []
cpp = []
csharp = []
css = []
dart = []
html = []
java = []
javascript = []
md = []
nasm = []
php = []
python = []
r = []
rust = []
sql = []
typescript = []