[package]
name = "ultilinter"
version = "0.4.1"
description = "A simple linter library"
include = [
    "src/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true



[features]
default = ["c", "cpp", "csharp", "css", "dart", "html", "java", "javascript", "md", "nasm", "php", "python", "r", "rust", "sql", "typescript"]

c = []
cpp = []
csharp = []
css = []
dart = []
html = []
java = []
javascript = []
md = []
nasm = []
php = []
python = []
r = []
rust = []
sql = []
typescript = []