[package]
name = "ultimd2html"
version = "0.3.5"
description = "A markdown to html converter for ultidocs"
exclude = ["CHANGELOG.md", "/target"]
include = [
    "src/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ultihighlighter = { version = "0.3.5", path = "../ultihighlighter" }