[package]
name = "ultimd2html"
version = "0.3.9"
description = "A markdown to html converter for ultidocs"
exclude = ["CHANGELOG.md", "/target"]
include = [
    "src/**",
    "assets/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
ultidocs-macros = { version = "0.3.9", path = "../ultidocs-macros", features = ["web", "minify_web"] }
ultihighlighter = { version = "0.3.9", path = "../ultihighlighter" }
