[package]
name = "ultiminify"
version = "0.3.9"
description = "A minifier for ultidocs"
include = [
    "src/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["minify", "format"]

minify = []
format = []

html = []
css = []
js = []

dir = ["html", "css", "js"]