[package]
name = "ultiminify"
version = "0.4.0"
description = "A minifier for ultidocs"
include = [
    "src/**",
    "Cargo.toml"
]
authors.workspace = true
# homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["minify", "format", "html", "css", "js"]

minify = []
format = []

html = []
css = []
js = []

dir = ["html", "css", "js"]